--- a/nextjs-app/tsconfig.json
+++ b/nextjs-app/tsconfig.json
@@ -17,7 +17,8 @@
       }
     ],
     "paths": {
-      "@/*": ["./*"]
+      "@/sanity/*": ["./sanity/*"],
+      "@/*": ["./app/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
