--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "next-sanity": "^9.8.30",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "sonner": "^1.7.1"
+    "sonner": "^1.7.1",
+    "tailwind-merge": "^2.5.5"
   }
 }
