--- a/nextjs-app/package.json
+++ b/nextjs-app/package.json
@@ -10,15 +10,25 @@
     "typegen": "sanity typegen generate"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.1",
     "@sanity/image-url": "^1.0.2",
     "@sanity/preview-url-secret": "^2.0.0",
     "@tailwindcss/typography": "^0.5.13",
+    "@radix-ui/react-accordion": "^1.2.2",
+    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-dropdown-menu": "^2.1.4",
+    "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-navigation-menu": "^1.2.3",
+    "@radix-ui/react-tooltip": "^1.1.6",
     "@types/node": "^20.14.13",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vercel/speed-insights": "^1.0.12",
     "autoprefixer": "^10.4.20",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "lucide-react": "^0.469.0",
     "next": "^15.0.1",
     "next-sanity": "^9.8.8",
     "postcss": "^8.4.41",
@@ -28,7 +38,9 @@
     "sanity": "^3.57.3",
     "sonner": "^1.5.0",
     "styled-components": "^6.1.12",
+    "tailwind-merge": "^2.6.0",
     "tailwindcss": "^3.4.10",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "5.5.4"
   },
   "devDependencies": {
